为 xsl 实现多语言
close #17

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -87,6 +87,10 @@ a {
     text-decoration-color: var(--delete-color);
 }
 
+.hidden {
+    display: none;
+}
+
 /*************************** header ***********************/
 
 header {
