--- a/docs/index.css
+++ b/docs/index.css
@@ -65,8 +65,6 @@ header {
     right: 0;
     display: block;
     z-index: 1000;
-    padding: var(--padding);
-    padding-bottom: var(--article-padding);
     height: var(--header-height);
     box-sizing: border-box;
 
@@ -79,8 +77,9 @@ header {
 }
 
 header h1 {
-    margin: 0;
     display: inline-block;
+    margin: var(--padding);
+    margin-bottom: var(--article-padding);
 }
 
 header h1 .version {
@@ -90,6 +89,18 @@ header h1 .version {
 header h1 img {
     height: 1.5rem;
     margin-right: .5rem;
+}
+
+header a {
+    line-height: 3.5;
+    float: right;
+    margin-right: var(--padding);
+    height: 100%;
+    color: var(--color);
+}
+
+header a:hover {
+    opacity: .5;
 }
 
 /************************** main **************************/
