--- a/docs/index.css
+++ b/docs/index.css
@@ -107,7 +107,6 @@ header a:hover {
 
 main {
     padding: 0rem var(--padding);
-    top: calc(var(--header-height) + var(--padding));
     left: 0;
     right: 0;
     position: relative;
@@ -115,6 +114,10 @@ main {
     margin: 0 auto;
     max-width: var(--max-width);
     text-align: left;
+}
+
+main .article {
+    margin-top: calc(var(--header-height) + var(--article-padding));
 }
 
 /************************* footer **************************/
