添加类型定义

--- a/docs/index.css
+++ b/docs/index.css
@@ -116,7 +116,7 @@ main {
     text-align: left;
 }
 
-main .article {
+main article {
     margin-top: calc(var(--header-height) + var(--article-padding));
 }
 
