--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -165,13 +165,8 @@ header .menu:hover ul {
 /*************************** main ***********************/
 
 main {
-    padding: 0rem var(--padding);
-    top: calc(var(--header-height) + var(--padding));
-    left: 0;
-    right: 0;
-    position: relative;
-
-    margin: 0 auto;
+    padding: 0 var(--padding);
+    margin: calc(var(--header-height) + var(--padding)) auto 0;
     max-width: var(--max-width);
     text-align: left;
 }
@@ -312,14 +307,12 @@ main .api .body .responses .status {
     border-bottom: 1px solid var(--border-color);
 }
 
-
 /*************************** footer ***********************/
 
 footer {
-    margin-top: 4rem;
     padding: var(--padding);
-
-    margin: 4rem auto;
+    margin: 0 auto;
     max-width: var(--max-width);
     text-align: left;
+    clear: both;
 }
