调整样式，修正 apidoc.xsl 取文件地址错误

--- a/docs/index.css
+++ b/docs/index.css
@@ -102,7 +102,7 @@ header .wrap {
 
 header h1 {
     display: inline-block;
-    margin: var(--padding) 0 var(--article-padding);
+    margin: var(--article-padding) 0;
     text-transform: uppercase;
 }
 
