修正无法显示本地化语言的错误
当文档中未指定 lang 或是 lang 属性值不存在于 locales.xsl 中时，
会因为找不到而不显示本地化内容。
当前提交对此作为修正，在找不到相关的本地化信息时，会读取第一个本地信息作为其默认值去渲染。

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 :root {
-    --max-width: 2000px;
+    --max-width: 2048px;
     --padding: 1rem;
     --article-padding: calc(var(--padding) / 2);
 
@@ -132,6 +132,7 @@ header .menus {
 }
 
 header .menu {
+    cursor: pointer;
     position: relative;
     margin-left: var(--padding);
     display: none; /* 默认不可见，只有在有 JS 的情况下，通过 JS 控制其可见性 */
@@ -175,7 +176,7 @@ main {
 }
 
 main .content {
-    padding: var(--article-padding);
+    padding: var(--article-padding) 0;
 }
 
 main .api {
@@ -313,8 +314,13 @@ main .api .body .responses .status {
 /*************************** footer ***********************/
 
 footer {
-    padding: var(--padding);
+    border-top: 1px solid var(--border-color);
+    padding: var(--padding) var(--padding);
+    text-align: left;
+    margin-top: var(--padding);
+}
+
+footer .wrap {
     margin: 0 auto;
     max-width: var(--max-width);
-    text-align: left;
 }
