正确显示父类型的名称

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -311,6 +311,10 @@ main .api .body .responses .status {
     border-bottom: 1px solid var(--border-color);
 }
 
+main .api .parent-type {
+    opacity: .5;
+}
+
 /*************************** footer ***********************/
 
 footer {
