--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -319,6 +319,15 @@ main .api .param .title {
     font-weight: normal;
 }
 
+main .api .param .example {
+    display: none;
+    margin: 0;
+}
+
+main .api .param .toggle-example {
+    cursor: pointer;
+}
+
 main .api .body .responses .status,
 main .api .body .requests .status {
     margin: calc(var(--padding) + var(--article-padding)) 0 var(--article-padding);
