--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -2,6 +2,7 @@
 
 :root {
     --max-width: 2048px;
+    --min-width: 200px; /* 当列的宽度小于此值时，部分行内容会被从横向改变纵向排列。 */
     --padding: 1rem;
     --article-padding: calc(var(--padding) / 2);
 
@@ -194,7 +195,8 @@ main .servers {
 }
 
 main .servers .server {
-    width: 33%;
+    flex-grow: 1;
+    min-width: var(--min-width);
     box-sizing: border-box;
     border: 1px solid var(--border-color);
     padding: var(--padding) var(--article-padding);
@@ -317,11 +319,14 @@ main .callback h3 {
 
 main .api .body {
     display: flex;
+    flex-flow: wrap;
 }
 
 main .api .body .requests,
 main .api .body .responses {
     flex: 1 1 50%;
+    box-sizing: border-box;
+    min-width: var(--min-width);
     padding: var(--article-padding);
 }
 main .api .body .requests {
