--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -259,57 +259,57 @@ main .api .description {
     border-bottom: 1px solid var(--border-color);
 }
 
-main .api[data-method=GET][open],
-main .api[data-method=GET]:hover,
-main .callback[data-method=GET] h3 {
+main .api[data-method='GET,'][open],
+main .api[data-method='GET,']:hover,
+main .callback[data-method='GET,'] h3 {
     border: 1px solid var(--method-get-color);
 }
-main .api[data-method=GET] summary {
+main .api[data-method='GET,'] summary {
     border-bottom: 1px solid var(--method-get-color);
 }
 
-main .api[data-method=POST][open],
-main .api[data-method=POST]:hover,
-main .callback[data-method=POST] h3 {
+main .api[data-method='POST,'][open],
+main .api[data-method='POST,']:hover,
+main .callback[data-method='POST,'] h3 {
     border: 1px solid var(--method-post-color);
 }
-main .api[data-method=POST] summary {
+main .api[data-method='POST,'] summary {
     border-bottom: 1px solid var(--method-post-color);
 }
 
-main .api[data-method=PUT][open],
-main .api[data-method=PUT]:hover,
-main .callback[data-method=PUT] h3 {
+main .api[data-method='PUT,'][open],
+main .api[data-method='PUT,']:hover,
+main .callback[data-method='PUT,'] h3 {
     border: 1px solid var(--method-put-color);
 }
-main .api[data-method=PUT] summary {
+main .api[data-method='PUT,'] summary {
     border-bottom: 1px solid var(--method-put-color);
 }
 
-main .api[data-method=PATCH][open],
-main .api[data-method=PATCH]:hover,
-main .callback[data-method=PATCH] h3 {
+main .api[data-method='PATCH,'][open],
+main .api[data-method='PATCH,']:hover,
+main .callback[data-method='PATCH,'] h3 {
     border: 1px solid var(--method-patch-color);
 }
-main .api[data-method=PATCH] summary {
+main .api[data-method='PATCH,'] summary {
     border-bottom: 1px solid var(--method-patch-color);
 }
 
-main .api[data-method=DELETE][open],
-main .api[data-method=DELETE]:hover,
-main .callback[data-method=DELETE] h3 {
+main .api[data-method='DELETE,'][open],
+main .api[data-method='DELETE,']:hover,
+main .callback[data-method='DELETE,'] h3 {
     border: 1px solid var(--method-delete-color);
 }
-main .api[data-method=DELETE] summary {
+main .api[data-method='DELETE,'] summary {
     border-bottom: 1px solid var(--method-delete-color);
 }
 
-main .api[data-method=OPTIONS][open],
-main .api[data-method=OPTIONS]:hover,
-main .callback[data-method=OPTIONS] h3 {
+main .api[data-method='OPTIONS,'][open],
+main .api[data-method='OPTIONS,']:hover,
+main .callback[data-method='OPTIONS,'] h3 {
     border: 1px solid var(--method-options-color);
 }
-main .api[data-method=OPTIONS] summary {
+main .api[data-method='OPTIONS,'] summary {
     border-bottom: 1px solid var(--method-options-color);
 }
 
