调整样式，使过期项的内容不再换行。

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -167,6 +167,7 @@ header .menu ul li label {
     display: inline-flex;
     align-items: baseline;
     word-break: keep-all;
+    white-space: nowrap;
 }
 
 header .menu ul li:last-of-type {
