调整 footer 的样式

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -389,4 +389,7 @@ footer {
 footer .wrap {
     margin: 0 auto;
     max-width: var(--max-width);
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
 }
