修理各类错误

--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -248,6 +248,7 @@ main .api summary .link {
     text-decoration: none;
 }
 
+main .api .callback .summary,
 main .api summary .summary {
     float: right;
     font-weight: 400;
