--- a/docs/v5/apidoc.css
+++ b/docs/v5/apidoc.css
@@ -223,7 +223,7 @@ main .api {
     border: 1px solid var(--border-color);
 }
 
-main .api summary {
+main .api>summary {
     margin: 0;
     padding: var(--article-padding);
     border-bottom: 1px solid var(--border-color);
@@ -232,24 +232,24 @@ main .api summary {
 }
 
 
-main details.api:not([open]) summary {
+main details.api:not([open])>summary {
     border: none;
 }
 
-main .api summary .action {
+main .api>summary .action {
     min-width: 4rem;
     font-weight: bold;
     display: inline-block;
     margin-right: 1rem;
 }
 
-main .api summary .link {
+main .api>summary .link {
     margin-right: 10px;
     text-decoration: none;
 }
 
 main .api .callback .summary,
-main .api summary .summary {
+main .api>summary .summary {
     float: right;
     font-weight: 400;
     opacity: .5;
@@ -266,7 +266,7 @@ main .api[data-method='GET,']:hover,
 main .callback[data-method='GET,'] h3 {
     border: 1px solid var(--method-get-color);
 }
-main .api[data-method='GET,'] summary {
+main .api[data-method='GET,']>summary {
     border-bottom: 1px solid var(--method-get-color);
 }
 
@@ -275,7 +275,7 @@ main .api[data-method='POST,']:hover,
 main .callback[data-method='POST,'] h3 {
     border: 1px solid var(--method-post-color);
 }
-main .api[data-method='POST,'] summary {
+main .api[data-method='POST,']>summary {
     border-bottom: 1px solid var(--method-post-color);
 }
 
@@ -284,7 +284,7 @@ main .api[data-method='PUT,']:hover,
 main .callback[data-method='PUT,'] h3 {
     border: 1px solid var(--method-put-color);
 }
-main .api[data-method='PUT,'] summary {
+main .api[data-method='PUT,']>summary {
     border-bottom: 1px solid var(--method-put-color);
 }
 
@@ -293,7 +293,7 @@ main .api[data-method='PATCH,']:hover,
 main .callback[data-method='PATCH,'] h3 {
     border: 1px solid var(--method-patch-color);
 }
-main .api[data-method='PATCH,'] summary {
+main .api[data-method='PATCH,']>summary {
     border-bottom: 1px solid var(--method-patch-color);
 }
 
@@ -302,7 +302,7 @@ main .api[data-method='DELETE,']:hover,
 main .callback[data-method='DELETE,'] h3 {
     border: 1px solid var(--method-delete-color);
 }
-main .api[data-method='DELETE,'] summary {
+main .api[data-method='DELETE,']>summary {
     border-bottom: 1px solid var(--method-delete-color);
 }
 
@@ -311,7 +311,7 @@ main .api[data-method='OPTIONS,']:hover,
 main .callback[data-method='OPTIONS,'] h3 {
     border: 1px solid var(--method-options-color);
 }
-main .api[data-method='OPTIONS,'] summary {
+main .api[data-method='OPTIONS,']>summary {
     border-bottom: 1px solid var(--method-options-color);
 }
 
@@ -366,16 +366,21 @@ main .api .param .toggle-example {
     cursor: pointer;
 }
 
-main .api .body .responses .status,
-main .api .body .requests .status {
+main .api .body .responses .status {
     margin: calc(var(--padding) + var(--article-padding)) 0 var(--article-padding);
     border-bottom: 1px solid var(--border-color);
     padding-bottom: 3px;
 }
 
-main .api .param .parent-type,
-main .api .status .mimetype {
+main .api .param .parent-type {
     opacity: .5;
+}
+
+main .api .responses details summary,
+main .api .requests details summary {
+    cursor: pointer;
+    margin: .5rem 0;
+    line-height: 1;
 }
 
 /*************************** footer ***********************/
