docs: 解决触屏无法触发 hover 的问题

--- a/docs/index.css
+++ b/docs/index.css
@@ -150,7 +150,8 @@ header .drop-menus a {
     color: var(--color);
 }
 
-header .drop-menus:hover ul {
+header .drop-menus:hover ul,
+header .drop-menus:active ul {
     display: block;
 }
 
