revert: 解决触屏无法触发 hover 的问题
f6b5ebad1605861733baa269c15a0b72b8a28b12

--- a/docs/index.css
+++ b/docs/index.css
@@ -150,8 +150,7 @@ header .drop-menus a {
     color: var(--color);
 }
 
-header .drop-menus:hover ul,
-header .drop-menus:active ul {
+header .drop-menus:hover ul {
     display: block;
 }
 
