--- a/docs/index.css
+++ b/docs/index.css
@@ -61,11 +61,11 @@ ul, ol {
 
 a {
     text-decoration: none;
-    color: var(--accent-color);
+    color: var(--color);
 }
 
 a:hover {
-    opacity: .7;
+    color: var(--accent-color);
 }
 
 p {
