docs: 调整菜单样式

--- a/docs/v6/apidoc.css
+++ b/docs/v6/apidoc.css
@@ -172,6 +172,11 @@ header .menu ul li label {
     align-items: baseline;
     word-break: keep-all;
     white-space: nowrap;
+    cursor: pointer;
+}
+
+header .menu ul li:hover label {
+    opacity: .7;
 }
 
 header .menu ul li:last-of-type {
